--- a/resources/view/layout/main.html
+++ b/resources/view/layout/main.html
@@ -70,5 +70,6 @@
     <script defer src="/static/datatables/js/dataTables.bootstrap5.min.js"></script>
     <script defer src="/static/noty/js/noty.min.js"></script>
     <script defer src="/static/bootstrap/js/bootstrap-select.min.js"></script>
+    <script defer src="/static/js/changeLanguage.js"></script>
 </th:block>
 </html>
