--- a/resources/static/css/main.css
+++ b/resources/static/css/main.css
@@ -274,3 +274,25 @@
     max-height: clamp(5em, 50vh, 300px);
     overflow: auto;
 }
+
+.en_lang {
+    position: absolute;
+    top: -9999px;
+    left: -9999px
+}
+.lang_buttons {
+    text-align: right
+}
+.button {
+    display: inline-block;
+    text-decoration: none;
+    border: 1px solid gray;
+    padding: 5px 15px;
+    margin-top: 20px;
+    margin-right: 0
+}
+.en_lang {
+    position: absolute;
+    top: -9999px;
+    left: -9999px
+}
